--- a/previews/Week 1 at Chicago.ipynb
+++ b/previews/Week 1 at Chicago.ipynb
@@ -37,7 +37,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Battle of the Trenches"
+    "# Battle of the Trenches\n",
+    "\n",
+    "The cliche in football is that games are won in the trenches. The following figure provides the EPA/rush by gap to showcase where both teams suceeded in rush offense as well as rush defense. As shown above, the bright spot in the Titans' offense was their rushing. Most of this success came behind 2023 draft pick Peter Skoronski as the Titans were able to generate higher EPA when running to the left side of the line. We should see similar success to the left side of the offensive line as the Titans were able to add tackle JC Latham in the 2024 draft. \n",
+    "\n",
+    "Defensively, the Titans performed decently along the right side of the defensive line while failing to keep the EPA/rush to a negative on the left side of the defense. The rush defense should see some improvement with the addition of T'Vondre Sweat to the interior defensive line. Additionally, a healthy Jeffrey Simmons should add some more talent to this rush defense. "
    ]
   },
   {
@@ -50,6 +54,48 @@
    "metadata": {},
    "source": [
     "![runGapAnalysis.png](attachment:runGapAnalysis.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Passing Heatmap"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Route Tree"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Personnel"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Coverage"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pass Catchers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Rushers"
    ]
   }
  ],
